Fixing layout problem in Opera, due the last changes made in the css file.
git-svn-id: http://fbug.googlecode.com/svn/lite@4923 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/branches/firebug1.3/skin/xp/firebug.css
+++ b/branches/firebug1.3/skin/xp/firebug.css
@@ -1046,6 +1046,7 @@ body {
     float: left;
     padding: 4px 2px 0 5px;
     position: absolute;
+    left: 30px;
 }
 
 #fbToolbarButtons a {
